--- a/project.properties
+++ b/project.properties
@@ -15,3 +15,4 @@ target=android-19
 android.library.reference.1=../google-play-services_lib
 android.library.reference.2=../../../Downloads/zxing-master/android
 android.library.reference.3=../appcompat_v7_2
+#This is a test
