--- a/build.gradle
+++ b/build.gradle
@@ -11,12 +11,17 @@ apply plugin: 'android'
 
 repositories{
     mavenCentral()
+    maven { url "https://raw.github.com/embarkmobile/zxing-android-minimal/mvn-repo/maven-repository"}
+
 }
 
 dependencies {
     compile 'com.android.support:appcompat-v7:19.0.+'
     compile 'com.google.android.gms:play-services:5.0.77'
     compile 'com.google.zxing:core:3.1.0'
+    compile 'com.embarkmobile:zxing-android-minimal:2.0.0@aar'
+    compile 'com.embarkmobile:zxing-android-legacy:2.0.0@aar'
+    compile 'com.embarkmobile:zxing-android-integration:2.0.0@aar'
     compile fileTree(include: '*.jar', dir: 'libs')
 }
 
