--- a/.settings/gradle/org.springsource.ide.eclipse.gradle.core.prefs
+++ b/.settings/gradle/org.springsource.ide.eclipse.gradle.core.prefs
@@ -1,4 +1,6 @@
 #org.springsource.ide.eclipse.gradle.core.preferences.GradleProjectPreferences
-#Thu Dec 18 17:44:30 IST 2014
+#Tue Dec 23 17:55:43 IST 2014
+org.springsource.ide.eclipse.gradle.classpath.enableSorting=true
+org.springsource.ide.eclipse.gradle.classpath.jar.remap.gradle.to.maven=true
 org.springsource.ide.eclipse.gradle.linkedresources=
 org.springsource.ide.eclipse.gradle.rootprojectloc=
