--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -20,7 +20,8 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        android:debuggable="true">
         <activity
             android:name="com.yishai.touchNgo.CheckInLocation"
             android:label="@string/app_name">
@@ -34,13 +35,13 @@
             android:name="com.google.zxing.client.android.CaptureActivity"
             android:configChanges="orientation|keyboardHidden"
             android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
-            android:windowSoftInputMode="stateAlwaysHidden" /> -->
+        android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
+            android:windowSoftInputMode="stateAlwaysHidden" />
 
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
-
+ -->
         <activity
             android:name="com.yishai.touchNgo.RegisterActivity"
             android:label="@string/title_activity_register" >
