--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript {
         classpath 'com.android.tools.build:gradle:1.0.0'
     }
 }
+
 apply plugin: 'android'
 
 
@@ -51,5 +52,12 @@ android {
         // by a similar customization.
         debug.setRoot('build-types/debug')
         release.setRoot('build-types/release')
+
+        buildTypes{
+            debug{
+                debuggable true
+            }
+
+        }
     }
 }
