--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -20,15 +20,20 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme"
-        android:debuggable="true">
+        android:theme="@style/AppTheme">
         <activity
-            android:name="com.yishai.touchNgo.CheckInLocation"
+            android:name=".activities.CheckInActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+                <category android:name="android.intent.category.BROWSABLE"/>
+                <data android:scheme="touchNgo"/>
             </intent-filter>
         </activity>
       <!--  <activity
@@ -43,7 +48,7 @@
             android:value="@integer/google_play_services_version" />
  -->
         <activity
-            android:name="com.yishai.touchNgo.RegisterActivity"
+            android:name=".activities.RegisterActivity"
             android:label="@string/title_activity_register" >
         </activity>
         <!--<activity
