--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -11,7 +11,6 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 
@@ -20,12 +19,14 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:debuggable="true">
         <activity
             android:name=".activities.CheckInActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+                <action android:name="com.yishai.touchNgo.activities.CheckInActivity" />
                 <category android:name="android.intent.category.LAUNCHER" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
@@ -36,25 +37,26 @@
                 <data android:scheme="touchNgo"/>
             </intent-filter>
         </activity>
-      <!--  <activity
+        <activity
             android:name="com.google.zxing.client.android.CaptureActivity"
             android:configChanges="orientation|keyboardHidden"
             android:screenOrientation="portrait"
         android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
             android:windowSoftInputMode="stateAlwaysHidden" />
 
+       <activity
+            android:name=".activities.RegisterActivity"
+            android:label="@string/title_activity_register" >
+            <intent-filter>
+                <action android:name="com.yishai.touchNGo.activities.RegisterActivity" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
- -->
-        <activity
-            android:name=".activities.RegisterActivity"
-            android:label="@string/title_activity_register" >
-        </activity>
-        <!--<activity
-            android:name=".Sandbox"
-            android:label="@string/title_activity_sandbox" >
-        </activity> -->
+
     </application>
 
 </manifest>
