--- a/build.gradle
+++ b/build.gradle
@@ -17,23 +17,30 @@ repositories{
 }
 
 dependencies {
-//    compile 'com.android.support:appcompat-v7:16.0'
+    //    compile 'com.android.support:appcompat-v7:16.0'
     compile 'com.google.android.gms:play-services:6.5.+'
     compile 'com.google.zxing:core:3.1.0'
     compile 'com.embarkmobile:zxing-android-minimal:2.0.0@aar'
     compile 'com.embarkmobile:zxing-android-legacy:2.0.0@aar'
     compile 'com.embarkmobile:zxing-android-integration:2.0.0@aar'
-    compile fileTree(include: '*.jar', dir: 'libs')
+    compile 'com.firebase:firebase-client-android:2.1.1+'
+    compile fileTree(dir: 'libs', include: '*.jar')
 }
 
 android {
     compileSdkVersion 21
     buildToolsVersion '21.1.2'
 
+    packagingOptions{
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE-FIREBASE.txt'
+        exclude 'META-INF/NOTICE'
+    }
+
     sourceSets {
         main {
             manifest.srcFile 'AndroidManifest.xml'
-            java.srcDirs = ['src']
+            java.srcDirs += ['src']
             resources.srcDirs = ['src']
             aidl.srcDirs = ['src']
             renderscript.srcDirs = ['src']
@@ -59,5 +66,10 @@ android {
             }
 
         }
+
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_7
+        targetCompatibility JavaVersion.VERSION_1_7
     }
 }
